# vocab

./: .env.example  .gitignore  OAUTH_SETUP.md  README.md  docker-compose.yml  verify-setup.sh
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  seed.py  verify_import.py
backend/alembic/: env.py
backend/alembic/versions/: 20a0a815a4d5_update_session_word_with_both_.py  27346effd368_initial_schema.py  4bd8b90e60b9_make_session_word_correct_nullable.py  73ba77e48bf1_add_user_language_preferences.py  75a758d9e86e_initial_schema_with_string_primary_keys.py  aa407446db42_init_schema.py  cb38ceacc54e_.py  e832200904b5_add_oauth_fields_to_user.py  f2a36166aa89_add_user_languages_table.py
backend/app/: main.py
backend/app/api/: config.py  profile.py  session.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/fixtures/: README.md  domains.json  languages.json
backend/fixtures/arts/: master_words.json  translations_en.json  translations_es.json  translations_fr.json
backend/fixtures/daily_life/: master_words.json  translations_en.json  translations_es.json  translations_fr.json
backend/fixtures/education/: master_words.json  translations_en.json  translations_es.json  translations_fr.json
backend/fixtures/entertainment/: master_words.json  translations_en.json  translations_es.json  translations_fr.json
backend/fixtures/family/: master_words.json  translations_en.json  translations_es.json  translations_fr.json
backend/fixtures/food_dining/: master_words.json  translations_en.json  translations_es.json  translations_fr.json
backend/fixtures/health/: master_words.json  translations_en.json  translations_es.json  translations_fr.json
backend/scripts/: seed_database.py
(+268 files in other folders)
