[project]
name = "vocab-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas",email = "nicolas.landel@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (==0.115.0)",
    "uvicorn[standard] (==0.32.0)",
    "sqlalchemy (==2.0.36)",
    "asyncpg (==0.30.0)",
    "pydantic (==2.10.3)",
    "pydantic-settings (==2.6.1)",
    "python-jose[cryptography] (==3.3.0)",
    "passlib[bcrypt] (==1.7.4)",
    "python-multipart (==0.0.18)",
    "email-validator (>=2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
