[project]
name = "vocab-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas",email = "nicolas.landel@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (==0.115.0)",
    "uvicorn[standard] (==0.32.0)",
    "sqlalchemy (==2.0.36)",
    "asyncpg (==0.30.0)",
    "pydantic (==2.10.3)",
    "pydantic-settings (==2.6.1)",
    "python-jose[cryptography] (==3.3.0)",
    "passlib[bcrypt] (==1.7.4)",
    "python-multipart (==0.0.18)",
    "email-validator (>=2.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "bcrypt (<4.0.0)",
    "authlib (>=1.3.0)",
    "httpx (>=0.27.0)",
    "itsdangerous (>=2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ipython (>=9.8.0,<10.0.0)"
]
